[package]
name = "template-compiler"
description = "A compiler from a simple template language to Wasm components"
keywords = ["compiler", "webassembly", "wasm"]
categories = ["compilers", "parser-implementations", "template-engine", "wasm"]
readme = "README.md"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"
authors = ["Kyle Brown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
miette = { version = "5.5", features = ["fancy"] }
thiserror = "1.0"
wasm-encoder = "0.29.0"
wat = "1.0"
wit-parser = "0.8"

[dev-dependencies]
wasmprinter = "0.2"
wasmtime = { version = "10.0", features = ["component-model"]}
wasmtime-component-macro = "10.0"
pretty_assertions = "1.1.0"
