[package]
name = "template-compiler"
description = "A compiler from a simple template language to Wasm components"
keywords = ["compiler", "webassembly", "wasm"]
categories = ["compilers", "parser-implementations", "template-engine", "wasm"]
repository = "https://github.com/esoterra/template-compiler"
readme = "README.md"
license = "MIT OR Apache-2.0"

version = "0.1.1"
edition = "2021"
authors = ["Robin Brown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
miette = { version = "5.5", features = ["fancy"] }
thiserror = "1.0"
wasm-encoder = "0.207"
wat = "1.207"
wit-parser = "0.207"

[dev-dependencies]
wasmprinter = "0.207"
wasmtime = "20"
pretty_assertions = "1.1.0"
